Add press to website

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -81,6 +81,12 @@
             "url": "http://missionlocal.org/2016/11/startup-crowdfunds-books-for-schools/",
             "text": "Startup Crowdfunds Books for Schools"
           }
+        ],
+        [
+          {
+            "url": "/static/book-booster_kcbs.mp3",
+            "text": "Interview with KCBS San Francisco"
+          }
         ]
       ]
     },
