--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -84,7 +84,7 @@
         ],
         [
           {
-            "url": "/static/book-booster_kcbs.mp3",
+            "assetUrl": "/static/book-booster_kcbs.mp3",
             "text": "Interview with KCBS San Francisco"
           }
         ]
