Add link to blog post

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -87,6 +87,13 @@
             "assetUrl": "/static/book-booster_kcbs.mp3",
             "text": "Interview with KCBS San Francisco"
           }
+        ],
+        [
+          {
+            "url": "https://medium.com/@albertmcwilliams3/book-deserts-and-the-widening-literacy-gap-a8ce2e83ceb6",
+            "text": "Blog post"
+          },
+          " about book deserts"
         ]
       ]
     },
