--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -42,7 +42,7 @@
       "name": "Quarry",
       "url": "http://yoquarry.club",
       "createdFor": "SF Disrupt Hackathon 2015",
-      "description": "Autocomplete as a service for e-commerce sites. For the demo, we used a Chrome extensions to hack the search on Walmart.com to point to our API (indexed with Walmart's data).",
+      "description": "Autocomplete as a service for e-commerce sites. For the demo, we used a Chrome extension to hack the search on Walmart.com to point to our API (indexed with Walmart's data).",
       "github": "golmansax/funnel",
       "technologies": ["chrome-extension", "expressjs", "reactjs", "css-modules", "js-latest", "bash"],
       "images": [
