--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -1,7 +1,7 @@
 {
 	"metaData": {
     "root": {
-      "titleTemplate": "%s — Holman Gao"
+      "titleTemplate": "%s | Holman Gao’s portfolio"
     },
     "technologies": {
       "title": "Technologies",
@@ -28,7 +28,7 @@
           "content": "Personal site of Holman Gao, entrepreneur and freelance developer with a love for education, University of Maryland and Blair Magnet alum, living in New York"
         }
       ],
-			"title": "Holman Gao",
+			"title": "Holman Gao – entrepreneur and web developer in New York",
 			"titleTemplate": "%s"
 		},
 		"workProjects": {
