--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -13,7 +13,7 @@
         "."
       ],
       "technologies": ["expressjs", "sequelize", "reactjs", "bootstrap", "js-latest", "scss", "heroku", "postgres"],
-      "images": ["//image.thum.io/get/https://www.thumlapse.com"]
+      "images": [{ "url": "https://www.thumlapse.com" }]
     },
     {
       "slug": "od-response",
