--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -74,6 +74,10 @@
     "zeki": {
       "name": "Zeki Mokhtarzada",
       "github": "zmokhtar"
+    },
+    "andrew-badr": {
+      "name": "Andrew Badr",
+      "github": "reverie"
     }
   }
 }
