--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -125,6 +125,25 @@
         ]
       ]
     },
+    {
+      "slug": "verse",
+      "name": "Verse",
+      "images": [{ "url": "https://verse.press" }],
+      "current": true,
+      "url": "https://verse.press",
+      "description": [
+        "Verse lets you find new poems and create poetry playlists."
+      ],
+      "colleagues": [{ "personId": "andrew-badr" }],
+      "technologies": ["django", "graphql", "reactjs", "python", "typescript", "scss", "heroku", "postgres"],
+			"positions": [
+				{
+					"title": "Software Contractor",
+					"start": "Dec ’16",
+					"end": "Current"
+				}
+			]
+    },
 		{
       "slug": "zenysis",
 			"name": "Zenysis",
