Add more colleagues

--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -78,6 +78,12 @@
     "andrew-badr": {
       "name": "Andrew Badr",
       "github": "reverie"
+    },
+    "akearney": {
+      "name": "Andy Kearney"
+    },
+    "jelinson": {
+      "name": "Julius Elinson"
     }
   }
 }
