--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -25,10 +25,10 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Collection of professional and hobby websites worked on by Holman Gao, entrepreneur and freelance developer."
+          "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao, entrepreneur and freelance developer."
         }
       ],
-			"title": "Website Portfolio | Holman Gao",
+			"title": "Developer Portfolio | Holman Gao",
 			"titleTemplate": "%s"
 		},
 		"workProjects": {
