--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -77,6 +77,7 @@
     },
     "andrew-badr": {
       "name": "Andrew Badr",
+      "url": "http://www.andrewbadr.com/",
       "github": "reverie"
     },
     "akearney": {
