Update volunteering and title

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -15,6 +15,18 @@
               {
                 "left": [
                   {
+                    "text": "Queens Xperience Social Hackathon",
+                    "url": "http://cs4all.nyc/2017/01/24/queens-xperience-social-hackathon/"
+                  },
+                  ", Mentor"
+                ],
+                "right": [
+                  "New York, NY: Dec ’16"
+                ]
+              },
+              {
+                "left": [
+                  {
                     "text": "Mission Graduates",
                     "url": "http://www.missiongraduates.org/"
                   },
