--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -28,7 +28,7 @@
           "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao, entrepreneur and freelance developer."
         }
       ],
-			"title": "Developer Portfolio | Holman Gao",
+			"title": "Portfolio | Holman Gao",
 			"titleTemplate": "%s"
 		},
 		"workProjects": {
