--- a/locales/en/testimonials.json
+++ b/locales/en/testimonials.json
@@ -9,7 +9,8 @@
     {
       "personId": "andrew-badr",
       "position": "Founder",
-      "projectSlug": "verse"
+      "projectSlug": "verse",
+      "quote": "I hired Holman to help build out my start-up, and I was thrilled with the quality of his work.  He started contributing immediately and thrived with all types of tasks, from implementing UI mocks to database-level changes.  He communicated well and kept me updated, which allowed me to worry less about his progress.  The project got to a point where I trusted him and I didn't need to review his work.  I would be happy to work with him again in the future!"
     }
   ]
 }
