Change work together title

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -4,7 +4,7 @@
       "titleTemplate": "%s | Holman’s Portfolio"
     },
     "workTogether": {
-      "title": "Let’s Work Together!",
+      "title": "Work With Me",
       "meta": [
         {
           "name": "description",
