Update BookBooster numbers

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -52,7 +52,7 @@
       "description": [
         "An initiative for the 2016-17 school year to ",
         "provide books to 20 Bay Area schools serving low-income students. ",
-        "As of January 2017, BookBooster has raised 8,071 books (over $24,000)!"
+        "As of October 2017, BookBooster has raised over 14,000 books ($42,000)!"
       ],
       "colleagues": [
         { "personId": "at" },
