--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -31,6 +31,9 @@
       "name": "Abi Raja",
 			"url": "http://abiraja.com"
     },
+    "bonnie": {
+      "name": "Bonnie Ding"
+    },
     "jefferson": {
       "name": "Jefferson Teng",
       "github": "jeffersonteng"
