Add link to project in testimonial

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -147,7 +147,7 @@
     },
 		{
       "slug": "zenysis",
-			"name": "Zenysis",
+			"name": "Zenysis (YC W16)",
 			"url": "http://www.zenysis.com",
 			"images": [
 				"/static/zenysis.jpg"
