Prefer shared project path rather than individual

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -20,7 +20,7 @@
 			]
     },
     {
-      "slug": "boost-my-school",
+      "slug": "boostmyschool",
       "name": "BoostMySchool",
       "images": ["/static/boost-my-school.jpg"],
       "current": true,
