Update langauge on work together page

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -4,7 +4,7 @@
       "titleTemplate": "%s | Holman’s Portfolio"
     },
     "workTogether": {
-      "title": "Work With Me",
+      "title": "Need a Freelance Software Developer?",
       "meta": [
         {
           "name": "description",
