--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -1,14 +1,15 @@
 {
 	"metaData": {
     "root": {
-      "titleTemplate": "%s | Holman’s Portfolio"
+      "titleTemplate": "%s | Portfolio | Holman Gao"
     },
     "workTogether": {
       "title": "Need a Freelance Software Developer?",
+      "titleTemplate": "%s | Holman Gao",
       "meta": [
         {
           "name": "description",
-          "content": "I'm available for freelance, contract, or consulting work. The core of my experience has been full-stack web development at early-stage companies."
+          "content": "I'm available for freelance, contract, or consulting work. In New York or remote. The core of my experience has been full-stack web development at early-stage companies."
         }
       ]
     },
@@ -34,10 +35,10 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao, entrepreneur and freelance developer."
+          "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao, entrepreneur and freelance developer living in New York."
         }
       ],
-			"title": "Holman’s Portfolio",
+			"title": "Software Developer Portfolio | Holman Gao",
 			"titleTemplate": "%s"
 		},
 		"workProjects": {
