--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -39,7 +39,7 @@
       "technologies": ["django", "reactjs", "graphql", "redux", "jquery", "bootstrap", "python", "javascript", "scss", "heroku", "postgres"],
 			"positions": [
 				{
-					"title": "Co-founder",
+					"title": "Software Contractor",
 					"start": "Aug ’17",
 					"end": "Current"
 				}
