Update portfolio message

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -9,7 +9,7 @@
       "meta": [
         {
           "name": "description",
-          "content": "I'm available for freelance, contract, or consulting work. In New York or remote. The core of my experience has been full-stack web development at early-stage companies."
+          "content": "I'm available for freelance, contract, or consulting work. In New York or remote. The core of my experience has been full-stack web and mobile development at early-stage companies."
         }
       ]
     },
