--- a/locales/en/testimonials.json
+++ b/locales/en/testimonials.json
@@ -7,6 +7,12 @@
       "quote": "I’ve known Holman for years and have recently had the pleasure of hiring him as a freelance developer.  Holman ramped up on an existing code base with ease and quickly executed on core features of my web app.  He is my go-to person for complex, on-demand projects, proving himself to be versatile at all levels of the stack from CSS tweaks to debugging database calls.  The best part is that I trust Holman with senior engineering decisions - he is genuinely thoughtful when it comes to architecting applications and understands the “big picture.”  For these reasons hiring Holman has without a doubt been my best experience with a freelance developer."
     },
     {
+      "personId": "hongvan",
+      "position": "Co-founder",
+      "projectSlug": "naturalize-us",
+      "quote": "I had the great pleasure of working with Holman on my initiative helping immigrants become U.S. citizens and registered voters. He’s an exceptionally responsive collaborator and was great at balancing expectations with realistic timelines. At the very beginning of our collaboration, Holman also took the initiative to sit down and discuss with me work-style, expectations, deadlines, etc -- all of which contributed to our ability to work well together. And of course, he’s a very talented programmer and is very flexible. Most important, he made sure from the start that whatever he built was going to be accessible to the next person receiving the handoff. I strongly recommend him for any startups or nonprofits looking for a freelance developer."
+    },
+    {
       "personId": "andrew-badr",
       "position": "Founder",
       "projectSlug": "verse",
