--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -98,6 +98,14 @@
     },
     "annie": {
       "name": "Annie Khoa"
+    },
+    "oz": {
+      "name": "Osuvaldo Ramos",
+      "github": "osuvaldo90"
+    },
+    "hareesh": {
+      "name": "Hareesh Ganesan",
+      "github": "hareeshganesan"
     }
   }
 }
