Separate out testimonials page

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -36,6 +36,9 @@
         "Get personalized life insurance quotes for people with diabetes."
       ],
       "technologies": ["reactjs", "graphql", "typescript", "js-latest", "python", "postgres", "docker"],
+      "colleagues": [
+        { "personId": "walter", "position": "Co-founder, CTO" }
+      ],
 			"positions": [
 				{
 					"title": "Software Contractor",
