--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -106,6 +106,11 @@
     "hareesh": {
       "name": "Hareesh Ganesan",
       "github": "hareeshganesan"
+    },
+    "walter": {
+      "name": "Walter Woodall",
+      "github": "walter-woodall",
+      "image": "/static/people/walter.jpg"
     }
   }
 }
