--- a/locales/en/testimonials.json
+++ b/locales/en/testimonials.json
@@ -7,6 +7,12 @@
       "quote": "I’ve known Holman for years and have recently had the pleasure of hiring him as a freelance developer.  Holman ramped up on an existing code base with ease and quickly executed on core features of my web app.  He is my go-to person for complex, on-demand projects, proving himself to be versatile at all levels of the stack from CSS tweaks to debugging database calls.  The best part is that I trust Holman with senior engineering decisions - he is genuinely thoughtful when it comes to architecting applications and understands the “big picture.”  For these reasons hiring Holman has without a doubt been my best experience with a freelance developer."
     },
     {
+      "personId": "walter",
+      "position": "Co-founder, CTO",
+      "projectSlug": "mira",
+      "quote": "We were looking for a senior-level engineer to help us build out the foundation of our tech stack, and Holman was the perfect fit.  His previous experience helped us make decisions on front-end architecture and database modeling and as a result, have made it easier to push the product forward. In addition, he had no problem taking on any type of implementation task, which freed my time to work on U/X and hiring. I was also continually impressed by Holman’s knowledge of cutting-edge tools and techniques as well as his dedication to strong coding fundamentals. I would recommend Holman to anyone looking for an experienced, do-it-all engineer."
+    },
+    {
       "personId": "hongvan",
       "position": "Co-founder",
       "projectSlug": "naturalize-us",
