--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -136,7 +136,7 @@
 					"end": "Current"
 				}
 			],
-      "url": "https://bayarea.bookbooster.org",
+      "url": "https://www.bookbooster.us",
       "technologies": ["expressjs", "reactjs", "sequelize", "foundation", "typescript", "scss", "heroku", "postgres"],
       "images": [
         "/static/book-booster.jpg"
